--- a/i18n/it/LC_MESSAGES/ckan.po
+++ b/i18n/it/LC_MESSAGES/ckan.po
@@ -4882,6 +4882,91 @@ msgstr ""
 "descrizione e altre informazioni, a un preciso URL. I dataset sono quello "
 "che gli utenti vedono cercando dati."
 
+# -- METADATA DI DEFAULT -- #
+#: ckanext/datitrentinoit/templates/package/snippets/package_basic_fields.html:8
+msgid "Holder"
+msgstr "Titolare"
+
+#: ckanext/datitrentinoit/templates/package/snippets/package_basic_fields.html:12
+msgid "Geographical Coverage"
+msgstr "Copertura geografica"
+
+#: ckanext/datitrentinoit/templates/package/snippets/package_basic_fields.html:16
+msgid "Temporal Coverage (Start Date)"
+msgstr "Copertura temporale (Data di inizio)"
+
+#: ckanext/datitrentinoit/templates/package/snippets/package_basic_fields.html:20
+msgid "Temporal Coverage (End Date)"
+msgstr "Copertura temporale (Data fine)"
+
+#: ckanext/datitrentinoit/templates/package/snippets/package_basic_fields.html:23
+msgid "Update Frequency"
+msgstr "Frequenza aggiornamento"
+
+#: ckanext/datitrentinoit/templates/package/snippets/package_basic_fields.html:23
+msgid "asNeeded"
+msgstr "se necessario"
+
+#: ckanext/datitrentinoit/templates/package/snippets/package_basic_fields.html:23
+msgid "quarterly"
+msgstr "quartale"
+
+#: ckanext/datitrentinoit/templates/package/snippets/package_basic_fields.html:23
+msgid "fortnightly"
+msgstr "stagionale"
+
+#: ckanext/datitrentinoit/templates/package/snippets/package_basic_fields.html:23
+msgid "annually"
+msgstr "annuale"
+
+#: ckanext/datitrentinoit/templates/package/snippets/package_basic_fields.html:23
+msgid "monthly"
+msgstr "mensile"
+
+#: ckanext/datitrentinoit/templates/package/snippets/package_basic_fields.html:23
+msgid "weekly"
+msgstr "settimanale"
+
+#: ckanext/datitrentinoit/templates/package/snippets/package_basic_fields.html:23
+msgid "daily"
+msgstr "giornaliero"
+
+#: ckanext/datitrentinoit/templates/package/snippets/package_basic_fields.html:23
+msgid "continual"
+msgstr "continuo"
+
+#: ckanext/datitrentinoit/templates/package/snippets/package_basic_fields.html:23
+msgid "notPlanned"
+msgstr "non programmato"
+
+#: ckanext/datitrentinoit/templates/package/snippets/package_basic_fields.html:23
+msgid "irregular"
+msgstr "irregolare"
+
+#: ckanext/datitrentinoit/templates/package/snippets/package_basic_fields.html:26
+msgid "Creation Date"
+msgstr "Data di creazione"
+
+#: ckanext/datitrentinoit/templates/package/snippets/package_basic_fields.html:29
+msgid "Publication Date"
+msgstr "Data di pubblicazione"
+
+#: ckanext/datitrentinoit/templates/package/snippets/package_basic_fields.html:32
+msgid "Revision Date"
+msgstr "Data di aggiornamento"
+
+#: ckanext/datitrentinoit/templates/package/snippets/package_basic_fields.html:35
+msgid "Encoding"
+msgstr "Codifica caratteri (Set dei caratteri)"
+
+#: ckanext/datitrentinoit/templates/package/snippets/package_basic_fields.html:38
+msgid "Site URL"
+msgstr "URL sito"
+
+#: ckanext/datitrentinoit/templates/package/snippets/package_basic_fields.html:41
+msgid "contact"
+msgstr "Contatto"
+
 #: ckanext/datitrentinoit/templates/package/snippets/package_form.html:29
 msgid ""
 "Important: by submitting content, you agree to our <a href=\"{tc_url}"
@@ -4890,7 +4975,7 @@ msgstr ""
 "Importante: con l'invio di contenuti confermi di aver preso visione e "
 "conformarti alle <a href=\"{tc_url}\">Note Legali del Portale</a>."
 
-#: ckanext/datitrentinoit/templates/package/snippets/package_metadata_fields.html:10
+#: ckanext/datitrentinoit/templates/package/snippets/bk/package_metadata_fields.html:10
 msgid "Technical documentation"
 msgstr "Documentazione tecnica"
 
@@ -5002,6 +5087,14 @@ msgstr ""
 "Registrandoti come utente confermi di aver letto le <a href=\"{tc_url}"
 "\">Note Legali del Portale</a> e l'<a href=\"{pp_url}\">Informativa sulla "
 "Privacy</a>."
+
+#~ msgid ""
+#~ "By registering a user, you confirm you read our <a href=\"{tc_url}"
+#~ "\">Legal notes</a> and <a href=\"{pp_url}\">Privacy policy</a>."
+#~ msgstr ""
+#~ "Registrandoti come utente confermi di aver letto le <a href=\"{tc_url}"
+#~ "\">Note Legali del Portale</a> e l'<a href=\"{pp_url}\">Informativa sulla "
+#~ "Privacy</a>."
 
 #~ msgid "Apps"
 #~ msgstr "Apps"
