More updates on translations files

--- a/i18n/de/LC_MESSAGES/ckan.po
+++ b/i18n/de/LC_MESSAGES/ckan.po
@@ -4889,7 +4889,7 @@ msgstr ""
 "sind die DateninhaberEntitäten."
 
 #: ckanext/datitrentinoit/templates/package/snippets/additional_info.html:5
-#: ckanext/datitrentinoit/templates/package/snippets/package_basic_fields.html:83
+#: ckanext/datitrentinoit/templates/package/snippets/package_basic_fields.html:84
 msgid "Field Description"
 msgstr "Feld Beschreibung"
 
@@ -4899,56 +4899,56 @@ msgstr "Metadaten Dataset"
 
 # -- METADATA DI DEFAULT -- #
 #: ckanext/datitrentinoit/templates/package/snippets/additional_info.html:22
-#: ckanext/datitrentinoit/templates/package/snippets/package_basic_fields.html:36
+#: ckanext/datitrentinoit/templates/package/snippets/package_basic_fields.html:37
 msgid "Holder"
 msgstr "Inhaber"
 
 #: ckanext/datitrentinoit/templates/package/snippets/additional_info.html:30
 #: ckanext/datitrentinoit/templates/package/snippets/additional_info.html:39
-#: ckanext/datitrentinoit/templates/package/snippets/package_basic_fields.html:41
+#: ckanext/datitrentinoit/templates/package/snippets/package_basic_fields.html:42
 msgid "Geographical Coverage"
 msgstr "Geographische Abdeckung"
 
 #: ckanext/datitrentinoit/templates/package/snippets/additional_info.html:51
 #: ckanext/datitrentinoit/templates/package/snippets/additional_info.html:60
-#: ckanext/datitrentinoit/templates/package/snippets/package_basic_fields.html:46
+#: ckanext/datitrentinoit/templates/package/snippets/package_basic_fields.html:47
 msgid "Temporal Coverage (Start Date)"
 msgstr "Zeitliche Abdeckung (Datum Beginn)"
 
 #: ckanext/datitrentinoit/templates/package/snippets/additional_info.html:72
 #: ckanext/datitrentinoit/templates/package/snippets/additional_info.html:81
-#: ckanext/datitrentinoit/templates/package/snippets/package_basic_fields.html:51
+#: ckanext/datitrentinoit/templates/package/snippets/package_basic_fields.html:52
 msgid "Temporal Coverage (End Date)"
 msgstr "Zeitliche Abdeckung (Datum Ende)"
 
 #: ckanext/datitrentinoit/templates/package/snippets/additional_info.html:93
-#: ckanext/datitrentinoit/templates/package/snippets/package_basic_fields.html:55
+#: ckanext/datitrentinoit/templates/package/snippets/package_basic_fields.html:56
 msgid "Update Frequency"
 msgstr "Frequenz der Aktualisierung"
 
 #: ckanext/datitrentinoit/templates/package/snippets/additional_info.html:101
-#: ckanext/datitrentinoit/templates/package/snippets/package_basic_fields.html:59
+#: ckanext/datitrentinoit/templates/package/snippets/package_basic_fields.html:60
 msgid "Creation Date"
 msgstr "Datum der Erstellung"
 
 #: ckanext/datitrentinoit/templates/package/snippets/additional_info.html:109
-#: ckanext/datitrentinoit/templates/package/snippets/package_basic_fields.html:63
+#: ckanext/datitrentinoit/templates/package/snippets/package_basic_fields.html:64
 msgid "Publication Date"
 msgstr "Datum der Publikation"
 
 #: ckanext/datitrentinoit/templates/package/snippets/additional_info.html:117
-#: ckanext/datitrentinoit/templates/package/snippets/package_basic_fields.html:67
+#: ckanext/datitrentinoit/templates/package/snippets/package_basic_fields.html:68
 msgid "Revision Date"
 msgstr "Datum der Aktualisierung"
 
 #: ckanext/datitrentinoit/templates/package/snippets/additional_info.html:125
-#: ckanext/datitrentinoit/templates/package/snippets/package_basic_fields.html:71
+#: ckanext/datitrentinoit/templates/package/snippets/package_basic_fields.html:72
 msgid "Encoding"
 msgstr "Charakterset"
 
 #: ckanext/datitrentinoit/templates/package/snippets/additional_info.html:133
 #: ckanext/datitrentinoit/templates/package/snippets/additional_info.html:138
-#: ckanext/datitrentinoit/templates/package/snippets/package_basic_fields.html:75
+#: ckanext/datitrentinoit/templates/package/snippets/package_basic_fields.html:76
 msgid "Site URL"
 msgstr "Webseite"
 
@@ -4959,47 +4959,81 @@ msgstr ""
 
 #: ckanext/datitrentinoit/templates/package/snippets/additional_info.html:256
 #: ckanext/datitrentinoit/templates/package/snippets/additional_info.html:261
-#: ckanext/datitrentinoit/templates/package/snippets/package_basic_fields.html:79
+#: ckanext/datitrentinoit/templates/package/snippets/package_basic_fields.html:80
 msgid "contact"
 msgstr "Kontakt"
 
-#: ckanext/datitrentinoit/templates/package/snippets/package_basic_fields.html:55
+#: ckanext/datitrentinoit/templates/package/snippets/package_basic_fields.html:7
+msgid ""
+"\n"
+"    <div>\n"
+"      <p>Se non specificato nella descrizione del dataset o nella "
+"\"Documentazione tecnica\", è necessario descrivere in questo metadato i "
+"campi (attributi) delle informazioni contenute nel dataset. Nel caso di dato "
+"tabellare, gli attributi corrispondono alle colonne della tabella. Le "
+"informazioni da specificare includono:</p>\n"
+"\n"
+"      <dl>\n"
+"        <dt>Nome completo</dt>\n"
+"        <dd>E' il nome che viene mostrato all'utente quando consulta il "
+"dataset (es. \"Descrizione\")</dd>\n"
+"        <dt>Nome breve</dt>\n"
+"        <dd>E' il nome dell’attributo utilizzato nel dataset, normalmente "
+"un'abbreviazione del nome completo (es.\"Desc\")</dd>\n"
+"        <dt>Descrizione</dt>\n"
+"        <dd>Illustra il significato del campo, eventuali relazioni con altri "
+"dataset, come il campo è stato generato, etc. (es. \"Codice ISTAT del comune "
+"amministrativo\")</dd>\n"
+"        <dt>Tipologia dell'attributo</dt>\n"
+"        <dd>testo, numero, data, etc.</dd>\n"
+"        <dt>Formato dell'attributo</dt>\n"
+"        <dd>Ad esempio unità di misura o struttura della data</dd>\n"
+"        <dt>Valori ammessi</dt>\n"
+"        <dd>Rappresenta il dominio del attributo e ne contiene, ove "
+"necessario, la decodifica (es. \"Il codice assume valori che vanno da 1 a "
+"223, numero dei comuni totali della Provincia Autonoma di Trento\") </dd>\n"
+"      </dl>\n"
+"    </div>\n"
+"  "
+msgstr ""
+
+#: ckanext/datitrentinoit/templates/package/snippets/package_basic_fields.html:56
 msgid "asNeeded"
 msgstr "falls erforderlich"
 
-#: ckanext/datitrentinoit/templates/package/snippets/package_basic_fields.html:55
+#: ckanext/datitrentinoit/templates/package/snippets/package_basic_fields.html:56
 msgid "quarterly"
 msgstr "vierteljährlich"
 
-#: ckanext/datitrentinoit/templates/package/snippets/package_basic_fields.html:55
+#: ckanext/datitrentinoit/templates/package/snippets/package_basic_fields.html:56
 msgid "fortnightly"
 msgstr "saisonal"
 
-#: ckanext/datitrentinoit/templates/package/snippets/package_basic_fields.html:55
+#: ckanext/datitrentinoit/templates/package/snippets/package_basic_fields.html:56
 msgid "annually"
 msgstr "jährlich"
 
-#: ckanext/datitrentinoit/templates/package/snippets/package_basic_fields.html:55
+#: ckanext/datitrentinoit/templates/package/snippets/package_basic_fields.html:56
 msgid "monthly"
 msgstr "monatlich"
 
-#: ckanext/datitrentinoit/templates/package/snippets/package_basic_fields.html:55
+#: ckanext/datitrentinoit/templates/package/snippets/package_basic_fields.html:56
 msgid "weekly"
 msgstr "wöchentlich"
 
-#: ckanext/datitrentinoit/templates/package/snippets/package_basic_fields.html:55
+#: ckanext/datitrentinoit/templates/package/snippets/package_basic_fields.html:56
 msgid "daily"
 msgstr "täglich"
 
-#: ckanext/datitrentinoit/templates/package/snippets/package_basic_fields.html:55
+#: ckanext/datitrentinoit/templates/package/snippets/package_basic_fields.html:56
 msgid "continual"
 msgstr "dauer"
 
-#: ckanext/datitrentinoit/templates/package/snippets/package_basic_fields.html:55
+#: ckanext/datitrentinoit/templates/package/snippets/package_basic_fields.html:56
 msgid "notPlanned"
 msgstr "unprogrammierten"
 
-#: ckanext/datitrentinoit/templates/package/snippets/package_basic_fields.html:55
+#: ckanext/datitrentinoit/templates/package/snippets/package_basic_fields.html:56
 msgid "irregular"
 msgstr "irregulär"
 
